# multi-robot-task-allocation-stack

./: .Dockerfile.swp  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  Dockerfile.humble  LICENSE  README.md  docker-compose.yaml  setup.cfg  setup.py  setup.sh  setup_docker.sh
catkin_ws/src/hsr_demo/: CMakeLists.txt  package.xml
catkin_ws/src/hsr_demo/launch/: bardh_world.launch  corridor_world.launch  fetch_gazebo.launch  homo_sapiens_world.launch  hsr_sim.launch  naman_wall_world.launch  spawn_hsr.launch
catkin_ws/src/hsr_demo/launch/hsr_launch/: hsrb.xml  hsrb_common.launch  hsrb_default_controllers.xml  hsrb_empty_world.launch  hsrb_gazebo_common.xml  hsrb_megaweb2015_world.launch  hsrb_multirobot_sim.launch  hsrb_no_controllers.xml  test_launch.launch
catkin_ws/src/hsr_demo/nodes/: holonomic_humans.py  holonomic_humans_pre_path.py  hsr_humans_straight_line.py  hsr_navigate_humans_line.py  hsr_navigate_humans_potential.py  hsr_navigate_naman_plan.py  hsr_navigate_walls.py  hsr_navigate_with_humans.py  hsr_velocity_control.py  humans_potential_field.py
catkin_ws/src/hsr_demo/src/: agent.py  bicycle.py  crowd.py  robot_controller_setup.py
catkin_ws/src/hsr_demo/worlds/: bardh.world  home_sapiens.world  hsr_corridor_environment.world  naman_wall_environment.world
colcon_ws/src/gazebo_sfm_plugin/: CMakeLists.txt  git_source_repo.txt  package.xml
colcon_ws/src/gazebo_sfm_plugin/include/gazebo_sfm_plugin/: ActorStatePublisherPlugin.hpp  ActorVelocitySubscriberPlugin.hpp  ModelStatePublisherPlugin.hpp  PedestrianCmdVelPlugin.h  gazebo_ros_diff_drive.hpp
colcon_ws/src/gazebo_sfm_plugin/launch/: cafe_ros2.launch.py
colcon_ws/src/gazebo_sfm_plugin/src/: ActorStatePublisherPlugin.cpp  ActorVelocitySubscriberPlugin.cpp  ModelStatePublisherPlugin.cpp  PedestrianCmdVelPlugin.cpp  PedestrianSFMPlugin.cpp  gazebo_ros_diff_drive.cpp
colcon_ws/src/pedsim_ros2/libpedsim/: CMakeLists.txt
colcon_ws/src/pedsim_ros2/pedsim_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_msgs/msg/: ObstaclePointArray.msg  TrackedGroup.msg
colcon_ws/src/pedsim_ros2/pedsim_ros/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_sensors/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_simulator/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_simulator/scripts/: keyboard_teleop.py  mock_static_scene.py
colcon_ws/src/pedsim_ros2/pedsim_simulator/src/: agentstatemachine.cpp  map_to_world_obstacle.cpp  scenarioreader.cpp  scene.cpp  simulate_diff_drive_robot.cpp  simulator.cpp  simulator_node.cpp
colcon_ws/src/pedsim_ros2/pedsim_srvs/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_utils/: CMakeLists.txt  package.xml
colcon_ws/src/pedsim_ros2/pedsim_visualizer/: CMakeLists.txt
colcon_ws/src/pedsim_ros2/pedsim_visualizer/src/: sim_visualizer.cpp  sim_visualizer_node.cpp
colcon_ws/src/social_navigation/: CMakeLists.txt  package.xml
colcon_ws/src/social_navigation/configs/: rviz.rviz  rviz_config.rviz
colcon_ws/src/social_navigation/include/: gazebo_ros_actor_command.h
colcon_ws/src/social_navigation/launch/: init_controller_setup.launch.py  nav2_bringup_launch.py  nav2_tb3_aws_launch.py  tb3_simulation_launch.py  turtlebot3_demo_launch.py
colcon_ws/src/social_navigation/nodes/: get_human_states.cpp  human_neareast_obstacle_from_map.cpp  human_nearest_obstacle_from_map.cpp  humans_sfm_node.cpp  robot_nearest_obstacle_from_map.cpp  robot_nearest_sector_obstacle_from_map.cpp
colcon_ws/src/social_navigation/scripts/: nav2_cbf_controller.py  nav2_cbf_plot.py  nav_to_pose_demo.py
colcon_ws/src/social_navigation/social_navigation/: CMakeLists.txt  package.xml
colcon_ws/src/social_navigation/social_navigation/configs/: case_config.yaml  case_config_1.yaml  case_config_2.yaml  case_config_3.yaml  case_config_4.yaml  case_config_5.yaml  case_config_6_withQ.yaml  humans_waypoint_config.yaml  humans_waypoint_config2.yaml  humans_waypoint_config3.yaml  nav2_params.yaml  rviz_config.rviz
colcon_ws/src/social_navigation/social_navigation/launch/: dispatcher.launch.py  goal_setter.launch.py  human_sfm.launch.py  init_controller_setup.launch.py  multi_cbf.launch.py  nav2_bringup_launch.py  nav2_navigation_launch.py  nav2_rviz_launch.py  nav2_tb3_aws_launch.py  nav2_tb3_aws_launch_multi.py  tb3_simulation_launch.py  turtlebot3_aws_launch.py  turtlebot3_demo_launch.py
colcon_ws/src/social_navigation/social_navigation/nodes/: gazebo_set_state.cpp  get_human_states.cpp  human_nearest_sector_obstacle_from_map.cpp  robot_nearest_obstacle_from_map.cpp  robot_nearest_sector_obstacle_from_map.cpp  test_goal.cpp
colcon_ws/src/social_navigation/social_navigation/worlds/: aws_hospital_humans.world  aws_hospital_humans_new_plugin.world  aws_hospital_humans_new_plugin3.world  aws_hospital_humans_new_plugin_test.world  aws_hospital_no_humans.world  gazebo_ros_actor_command.cpp  human_actor.model  test_human.world  two_waffle_aws_hospital_humans.world  waffle.model  waffle_aws_hospital.world  waffle_aws_hospital_humans.world
colcon_ws/src/social_navigation/social_navigation_py/: package.xml  pyprogect.toml  setup.cfg  setup.py
colcon_ws/src/social_navigation/social_navigation_py/social_navigation_py/: dispatcher.py  goal_setter.py  goal_setter_cp.py  goal_setter_for_data_collect.py  human_control_node.py  human_stop_node.py  image_saver.py  init_planner.py  map_locations.json  minimal_publisher.py  multiagent_nav2_cbf.sh  nav2_cbf_controller.py  nav2_cbf_controller10.py  nav2_cbf_controller2.py  nav2_cbf_controller3.py  nav2_cbf_controller4.py  nav2_cbf_controller5.py  nav2_cbf_controller6.py  nav2_cbf_controller7.py  pickle_roadmap.py  (+23 more)
colcon_ws/src/social_navigation/src/: cbf_controller.py  cbf_obstacle_controller.py  cbf_obstacle_plot.py  dynamic_unicycle.py  polytope_utils.py
colcon_ws/src/social_navigation/worlds/: test_world.world  waffle.world  waffle_aws_hospital.world  waffle_aws_hospital_humans.world  waffle_aws_hospital_humans_improvised.world  waffle_aws_hospital_humans_small.world
(+170 files in other folders)
