<?xml version="1.0"?>
<package>
  <name>pedsim_msgs</name>
  <version>0.0.2</version>
  <description>The pedsim_msgs package: contains messages for pedsim</description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

</package>
