<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

 <name>social_navigation</name>
 <version>0.0.0</version>
 <description>Redirecting Vicon data to PX4 at specified frequency</description>
 <maintainer email="user@todo.todo">user</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>

 <depend>rclcpp</depend>
 <depend>rclpy</depend>
 <depend>gazebo_msgs</depend>
 <depend>std_msgs</depend>
 <depend>nav2_bringup</depend>
 <depend>geometry_msgs</depend>
 <depend>nav_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>visualization_msgs</depend>
 <depend>social_navigation_msgs</depend>
 <exec_depend>ros2launch</exec_depend>
 
</package>